2000-05-14  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-beep): added.  beeps visibly, audibly, or not at
	all, according to the argument.
	(tnt-beep-on-message-available-event): added.
	(tnt-beep-on-message-in-visible-buffer): added.
	(tnt-beep-on-error): added.
	(tnt-beep-beep-beep): removed.  (its functionality is now covered
	by the message-available-event and message-in-visible-buffer
	variables above.)
	(tnt-handle-im-in): now uses the new beep variables.
	(tnt-handle-chat-invite): now uses the new beep variable.
	(tnt-error): now uses the new beep variable.

2000-05-14  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-buddy-list-backup-filename): added.
	(tnt-restore-buddy-list-if-necessary): added.
	(tnt-buddy-list-is-empty-p): added.
	(tnt-restore-buddy-list): added.
	(tnt-handle-nick): now calls the restore from backup function.
	also calls (tnt-show-buddies), since if we are restoring from
	backup, we want to go to the buddy list buffer after we're done
	restoring it.
	(tnt-handle-sign-on): removed (tnt-show-buddies).  now doing that
	in tnt-handle-nick, so that it happens after we restore the buddy
	list.

2000-05-11  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* Makefile (VERSION_PATTERN): made version pattern more general
	(supports x.x or x.x.x, or really anything)

	* tnt.el (tnt-version): updated version to 2.2.1

2000-05-03  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-strip-a-href): if the link url appears again as the
	link text, we don't need to see it twice.  in particular, this
	happens if the person at the other end typed in a url or email
	address and their client made it a link for them.

2000-05-01  John Jannotti  <jj@lcs.mit.edu>

	* toc.el (toc-permit-mode): Added (keeps track of server side mode)
	(toc-permit-list): Added (keeps track of server side list)
	(toc-add-permit): Keep track of server info
	(toc-add-deny): Keep track of server info